# yp-blog

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
blog-cli/: Cargo.toml
blog-cli/src/: cli.rs  error.rs  main.rs
blog-client/: Cargo.toml  build.rs
blog-client/src/: api_client.rs  blog_client.rs  error.rs  grpc_client.rs  http_client.rs  lib.rs
blog-grpc-api/: Cargo.toml  build.rs
blog-grpc-api/proto/: blog.proto
blog-grpc-api/src/: lib.rs
blog-server/: Cargo.toml  build.rs
blog-server/migrations/: 20250101000002_create_posts.sql
blog-server/src/: main.rs
blog-server/src/application/: auth_service.rs  blog_service.rs
blog-server/src/data/: post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  post.rs  user.rs
blog-server/src/infrastructure/: database.rs  jwt.rs  logging.rs
blog-server/src/presentation/: grpc_service.rs  http_handlers.rs  middleware.rs
blog-wasm/: Cargo.toml  index.html
blog-wasm/src/: dto.rs  error.rs  lib.rs
bruno/: HTTP create post.bru  HTTP delete post.bru  HTTP edit post.bru  HTTP get post.bru  HTTP list posts.bru  HTTP login.bru  HTTP register.bru  bruno.json
proto/: blog.proto
