[workspace]
members = [
    "blog-cli",
    "blog-client",
    "blog-grpc-api",
    "blog-server",
    "blog-wasm",
]
resolver = "3"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures-util = "0.3"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14" }
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "chrono",
] }
