[package]
name = "blog-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
blog-client = { path = "../blog-client" }
chrono = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
