[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"


[dependencies]
async-trait = "0.1"
blog-grpc-api = { path = "../blog-grpc-api" }
chrono = { workspace = true }
clap = { workspace = true }
enum_dispatch = "0.3"
prost = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
url = "2"
