[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
argon2 = "0.5"
blog-grpc-api = { path = "../blog-grpc-api" }
chrono = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
futures-util = { workspace = true }
actix-web-httpauth = "0.8"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
