[package]
name = "blog-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-net = "0.6"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
thiserror = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "console",
    "Storage",
] }
